--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,8 +9,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp8"
         android:layout_marginTop="@dimen/dp100"
-        android:orientation="horizontal"
+        android:layout_marginEnd="@dimen/dp8"
+        android:orientation="vertical"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -19,16 +21,25 @@
             android:id="@+id/search_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/grey"
+            android:drawableStart="@drawable/ic_search"
+            android:gravity="center"
+            android:hint="@string/hint"
             android:imeOptions="actionSearch"
             android:inputType="text"
-            android:drawableStart="@drawable/ic_search"
-            android:hint="@string/hint"
-            android:backgroundTint="@color/grey"
-            android:gravity="center"
             android:singleLine="true"
             app:layout_constraintLeft_toRightOf="@+id/img_search"
             app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/btn_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dp26"
+            android:background="@drawable/background"
+            android:text="Search"
+            android:textAllCaps="false" />
     </LinearLayout>
 
     <ProgressBar
