--- a/app/src/main/res/layout/word_list_frag.xml
+++ b/app/src/main/res/layout/word_list_frag.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="viewmodel"
-            type="com.example.dictionarychallenge.ui.WordListFragmentViewModel" />
-    </data>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -15,7 +9,7 @@
         tools:context=".ui.WordListFragment">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/word_list"
+            android:id="@+id/rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
@@ -23,4 +17,3 @@
             android:paddingTop="@dimen/dp26"
             android:paddingEnd="@dimen/dp12" />
     </FrameLayout>
-</layout>
